--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,27 @@
-.DS_*
-*.log
+# Logs
 logs
-**/*.backup.*
-**/*.back.*
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 node_modules
-bower_components
+dist
+dist-ssr
+*.local
 
-*.sublime*
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 #Personal md file
 Steps.md
