Add Navbar component and basic fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "videotube-frontend",
+  "name": "Streamtube-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
