--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.52.2",
     "axios": "^1.7.3",
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
