--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.52.2",
+    "@vidstack/react": "^1.12.9",
     "axios": "^1.7.3",
+    "hls.js": "^1.5.15",
     "html-react-parser": "^5.1.12",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
