--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.52.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "@vidstack/react": "^1.12.9",
     "axios": "^1.7.3",
     "hls.js": "^1.5.15",
